--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,37 @@
 @import url("./reset.css");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+* {
+  font-family: 'Roboto', sans-serif;
+}
+
+#container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
+  height: 100vh;
+}
+
+h1 {
+  font-size: 2.5rem;
+  text-align: center;
+}
+
+#choices {
+  display: flex;
+  gap: 2rem;
+}
+
+button {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
+  border: .125rem solid black;
+}
+
+#results {
+  font-size: 1.5rem;
+  text-align: center;
+}
